[package]
name = "dodos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.2"
spin = "0.9"
x86_64 = "0.14.2"
uart_16550 = "0.3"
pic8259 = "0.10"
pc-keyboard = "0.5.0"
lazy_static = { version = "1.4", features = ["spin_no_std"]}

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false


[package.metadata.bootimage]
# The cargo subcommand that will be used for building the kernel.
#
# For building using the `cargo-xbuild` crate, set this to `xbuild`.
build-command = ["build"]
# The command invoked with the created bootimage (the "{}" will be replaced
# with the path to the bootable disk image)
# Applies to `bootimage run` and `bootimage runner`
run-command = ["qemu-system-x86_64", "-audiodev", "pa,id=snd0", "-machine", 
    "pcspk-audiodev=snd0", "-drive", "format=raw,file={}"]

run-args = []
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300
test-no-reboot = true